--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,15 @@ header > div:last-child {
   align-items: center;
   gap: 10%;
 }
+header > div:last-child button {
+  height: 30px;
+  width: 120px;
+  border-radius: 10px;
+}
+header > div:last-child > button {
+  background-color: rgb(44, 177, 186);
+  border-style: none;
+}
 header > div:last-child > div {
   /* border: 2px solid rgb(95, 131, 228); */
   display: flex;
@@ -57,6 +66,9 @@ header > div:last-child > div {
   justify-content: space-around;
   width: 50%;
   gap: 10%;
+}
+header > div:last-child > div > button {
+  border: 2px solid rgb(44, 177, 186);
 }
 .sorting {
   /* border: 2px solid rgb(228, 224, 95); */
